# cairn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  PRD.md  README.md  SEO-STRATEGY.md  architecture.md  index.css  index.html  pyproject.toml  roadmap.md  tasks.md
.agents/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cairn/: README.md  __init__.py  main.py
cairnforge/: README.md  __init__.py  budget.py  checkpoint.py  compiler.py  executor.py  expression.py  models.py  parser.py  state_machine.py  validator.py
cairnforge/plugins/: __init__.py  base.py  builtin_fallback.py  core_handlers.py  langchain.py  langgraph.py
cairnhub/: README.md  api.py  indexes.py  local_registry.py  publishers.py  ratings.py  store.py  traces.py
cairnhub/templates/: lens.html.j2
cairnlang/: README.md  SPEC.md
cairnlang/examples/: branching-review.crn  budget-guard.crn  circuit-breaker.crn  composed-hello.crn  data-pipeline.crn  failure-hook.crn  hello-world.crn  parallel-fanout.crn  retry-recovery.crn
cairnlang/examples/shared/: greeting-subloop.crn
cairnlang/schema/: cairn-1.0.schema.json
cairnstudio/: README.md  __init__.py  app.py
cairnstudio/public/: studio-app.js  studio.css  studio.js
cairnstudio/templates/: index.html.j2
docs/: README.md  cli-reference.md  getting-started.md  index.html  mvp-feature-audit.md  observability.md  phase-2-3-audit.md  plugin-development.md  release-v0.1.0.md  robots.txt  self-hosting.md  sitemap.xml
docs/grafana/: cairn-runtime-dashboard.json
tests/: README.md
tests/fixtures/: invalid-subloop.crn  invalid-transition.crn
tests/integration/: test_executor.py
tests/unit/: test_cairnhub_api.py  test_cairnstudio.py  test_cli.py  test_expression.py  test_langchain_plugin.py  test_langgraph_plugin.py  test_parser.py  test_validator.py
