[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn"
version = "0.1.0"
description = "Open runtime and DSL for intelligent task loops"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Cairn Contributors" }
]
dependencies = [
  "Jinja2>=3.1",
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "typer>=0.12",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
langchain = [
  "langchain-core>=0.3"
]

[project.scripts]
cairn = "cairn.main:main"

[tool.setuptools.packages.find]
include = ["cairn*", "cairnforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
